fixed spacing of the buttons on the home page as well as font sizing on all breakpoints to better fit

--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -10,25 +10,35 @@
     width: 100%;
     height: 50vh;
 }
-.service{
+.genre{
     &__button{
-        font-size: 4rem;
-        padding: 1rem;
+        font-size: 2rem;
+        padding: .25rem .5rem;
         border-radius: .25rem;
         color: white;
         background-color: transparent;
         border: 2px solid rgba($color: #000000, $alpha: .1);
         filter: drop-shadow(0 0 0.15rem rgb(65, 64, 64));
+
+        @include tablet {
+            font-size: 3rem;
+            padding: .25rem 1rem;
+        }
     }
 }
 .button{
     &__btn{
-        font-size: 4rem;
-        padding: 1rem;
+        font-size: 2rem;
+        padding: .25rem .5rem;
         border-radius: .25rem;
         color: white;
         background-color: transparent;
         border: 2px solid rgba($color: #000000, $alpha: .1);
         filter: drop-shadow(0 0 0.15rem rgb(65, 64, 64));
+
+        @include tablet {
+            font-size: 3rem;
+            padding: .25rem 1rem;
+        }
     }
 }
